# weather_forecast

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  config.json  interface.cpp  interface.h  weather.cpp  weather.h
